--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>New Tab</title>
-  <link href="style.css" rel="stylesheet" type="text/css">
+	<meta charset="UTF-8">
+	<title>New Tab</title>
 
+	<link
+			href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC&display=swap"
+			rel="stylesheet">
+	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<div class="full-screen"></div>
+<div id="screen"></div>
 
-<div class="content">
-  <div>
-    <h1 class="time" style="display: inline;"></h1>
-    <span class="ampm"></span>
-  </div>
-  <div>
-    <h2 class="greetings"></h2>
-  </div>
+<div id="time">
+  <span>
+    <h1 id="hour"></h1>
+    <h1 id="colon"></h1>
+    <h1 id="minute"></h1>
+  </span>
+
+	<h2 id="greeting"></h2>
 </div>
 
 <script src="jquery-3.4.1.min.js" type="text/javascript"></script>
