--- a/src/index.html
+++ b/src/index.html
@@ -4,25 +4,25 @@
 	<meta charset="UTF-8">
 	<title>New Tab</title>
 
-	<link
-			href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC&display=swap"
-			rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC&display=swap"
+	      rel="stylesheet">
 	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
+
 <body>
 <div id="screen"></div>
 
 <div id="time">
-  <span>
-    <h1 id="hour"></h1>
-    <h1 id="colon"></h1>
-    <h1 id="minute"></h1>
-  </span>
+	<h1 id="hour"></h1>
+	<h1 id="colon"></h1>
+	<h1 id="minute"></h1>
 
 	<h2 id="greeting"></h2>
 </div>
 
-<script src="jquery-3.4.1.min.js" type="text/javascript"></script>
+<div id="days"></div>
+
+<script src="../res/jquery-3.4.1.min.js" type="text/javascript"></script>
 <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
