--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<div id="screen"></div>
+<div id="background"></div>
 
 <div id="time">
 	<h1 id="hour"></h1>
@@ -19,8 +19,6 @@
 
 	<h2 id="greeting"></h2>
 </div>
-
-<div id="days"></div>
 
 <script src="../res/jquery-3.4.1.min.js" type="text/javascript"></script>
 <script src="script.js" type="text/javascript"></script>
