--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC&display=swap"
 	      rel="stylesheet">
+	<link href="reset.css" rel="stylesheet" type="text/css">
 	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
